@@ -26,6 +26,7 @@ repositories {
 	maven { url = uri("https://repo.spring.io/snapshot") }
 }
 
+val ktlint by configurations.creating
 
 dependencies {
 	implementation("io.dereknelson.lostcities-cloud:lostcities-models:1.0-SNAPSHOT")
@@ -37,14 +38,40 @@ dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter-amqp")
 
-	implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0")
+	implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.13.1")
 
+	ktlint("com.pinterest:ktlint:0.44.0") {
+		attributes {
+			attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+		}
+	}
 	//implementation("com.fasterxml.jackson.core:jackson-core:2.5.2")
 
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
 
+val ktlintCheck by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+
+	description = "Check Kotlin code style."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("src/**/*.kt")
+}
+
+val ktlintFormat by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+	description = "Fix Kotlin code style deviations."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("-F", "src/**/*.kt")
+	jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
 
 tasks.withType<KotlinCompile> {
 	kotlinOptions {
@@ -62,3 +89,4 @@ tasks.bootRun {
 tasks.withType<Test> {
 	useJUnitPlatform()
 }
+
